@@ -47,6 +47,8 @@ version 7.1:
       question mark is a part of <val> or not)
     - multiple stream types in a single specifier (e.g. :s:s:0) now cause an
       error, as such a specifier makes no sense
+- Mastering Display and Content Light Level metadata support in hevc_nvenc
+  and av1_nvenc encoders
 
 
 version 7.0:
